2016-06-26  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use 'wc' prefix instead of suffix for wide-char word break APIs.

	To be consistent with other modules, wide-char APIs should be
	prefixed, not suffixed with 'wc'.

	* include/thai/thwbrk.h:
	* src/libthai.c:
	* src/libthai.def:
	* src/libthai.map:
	* src/thwbrk/thwbrk.c:
	* tests/test_thwbrk.c:
	  - Rename th_brk_find_breaks_wc() -> th_brk_wc_find_breaks().
	  - Rename th_brk_insert_breaks_wc() -> th_brk_wc_insert_breaks().

2016-06-25  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rename the new APIs to be more meaningful.

	The methods for ThBrk I proposed to Mark Brown in our discussion
	were too confusing. Before they get public, let's pick more
	meaningful names instead:
	  - th_brk_brk()       -> th_brk_find_breaks()
	  - th_brk_brk_line()  -> th_brk_insert_breaks()
	  - th_brk_wbrk()      -> th_brk_find_breaks_wc()
	  - th_brk_wbrk_line() -> th_brk_insert_breaks_wc()

	* include/thai/thbrk.h:
	* include/thai/thwbrk.h:
	* src/libthai.c:
	* src/libthai.def:
	* src/libthai.map:
	* src/thbrk/thbrk.c:
	* src/thwbrk/thwbrk.c:
	* tests/test_thbrk.c:
	* tests/test_thwbrk.c:
	  - Rename functions as listed above.
	  - Rename the 'n' argument in the functions to indicate
	    whose size it describes.

2016-06-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add function deprecation warnings.

	* include/thai/thailib.h:
	  - Add TH_DEPRECATED and TH_DEPRECATED_FOR() macros,
	    taken from GLib.
	* include/thai/thbrk.h (th_brk, th_brk_line):
	* include/thai/thwbrk.h (th_wbrk, th_wbrk_line):
	  - Apply TH_DEPRECATED_FOR() to deprecated functions,
	    with suggestions for alternatives.

2016-06-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update tests to test new APIs.

	* tests/test_thbrk.c (main), tests/test_thwbk.c (main):
	  - Create, use, and free ThBrk instance with the new APIs
	    instead of the deprecated ones.

2016-06-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>
